switched up the strategy for adding badges so prevent layout shift

--- a/assets/scss/custom/_custom.scss
+++ b/assets/scss/custom/_custom.scss
@@ -561,8 +561,9 @@
     
 }
 
-#product-details-two .product-badges {
+#product-badges-desktop {
     display: none;
+    height: $product-badges-max;
 
     @include breakpoint("medium") {
         display: flex;
@@ -572,7 +573,7 @@
     }
 }
 
-#product-image-gallery .product-badges {
+#product-badges-mobile {
     display: flex;
     position: absolute;
     bottom: 0;
